# Virsion

./: README.md
FYT2020VISION/: CMakeLists.txt  FightingVision2020.cpp  FightingVision2020.h  README.md
FYT2020VISION/Armor/: ArmorBox.cpp  ArmorDetector.cpp  ArmorDetector.h  LightBar.cpp  Solver.cpp  Solver.h  matchArmors.cpp
FYT2020VISION/Camera/: FightingDahengCapture.cpp  FightingDahengCapture.h  FightingVideoCapture.cpp  FightingVideoCapture.h
FYT2020VISION/Camera/Include/Daheng_include/: DxImageProc.h  GxIAPI.h
FYT2020VISION/Camera/lib/x64/: DxImageProc.lib  GxIAPI.lib
